gcc/testsuite/rust/rustc/ui/borrowck/borrowck-move-out-of-overloaded-auto-deref.rs
use std::rc::Rc;

pub fn main() {
    let _x = Rc::new(vec![1, 2]).into_iter();
// { dg-error ".E0507." "" { target *-*-* } .-1 }
}

